--- a/Events/style.css
+++ b/Events/style.css
@@ -6,3 +6,13 @@ div{
     color: white;
     margin-top: 10px;
 }
+
+.light{
+    background-color: white;
+    color: black;
+}
+
+.dark{
+    background-color: black;
+    color: white;
+}
